tests/baselines/reference/callOfPropertylessConstructorFunction.errors.txt
callOfPropertylessConstructorFunction.js(7,1): error TS2348: Value of type 'typeof Dependency' is not callable. Did you mean to include 'new'?


==== callOfPropertylessConstructorFunction.js (1 errors) ====
    /**
     * @constructor
     */
    function Dependency(j) {
      return j
    }
    Dependency({})
    ~~~~~~~~~~~~~~
!!! error TS2348: Value of type 'typeof Dependency' is not callable. Did you mean to include 'new'?
    